--- a/templates/index.html
+++ b/templates/index.html
@@ -242,7 +242,7 @@
 
             {% if prediction %}
             <div class="result">
-                Estimated Medical Charges: {{ prediction } $ }
+                Estimated Medical Charges: ${{ prediction }}
             </div>
             {% endif %}
         </div>
@@ -256,5 +256,6 @@
 
 
 </body>
+
 
 </html>
