--- a/templates/index.html
+++ b/templates/index.html
@@ -176,7 +176,7 @@
         <!-- ✅ RESULT SHOWN HERE (NOT AT BOTTOM) -->
         {% if prediction %}
         <div class="result">
-            Estimated Medical Charges: ${{ prediction }}
+            Estimated Medical Charges: ₹{{ prediction }}
         </div>
         {% endif %}
 
@@ -223,3 +223,4 @@
 
 </body>
 </html>
+
