--- a/templates/index.html
+++ b/templates/index.html
@@ -212,6 +212,8 @@
             </div>
 
             <button type="submit">Predict Medical Charges</button>
+            <button type="reset">Clear Form</button>
+
         </form>
     </div>
 
